--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 MONGODB_URI=mongodb+srv://aniketsingh22dec:gOy5xAqtiuitioQx@cluster0.vi3dk9n.mongodb.net/mern_admin?retryWrites=true&w=majority&appName=Cluster0
+
+JWT_SECRET_KEY=MERNSTACKSECRETKEY
